<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.survey.surveyitemviewmodel.FreeFormItemsViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
      android:id="@+id/free_form_text"
      style="@style/SurveyFreeFormAnswerEditText"
      android:hint="@string/survey_free_form_text_hint"
      android:inputType="text|textMultiLine|textCapSentences"
      android:minLines="4"
      android:overScrollMode="never"
      android:text="@={viewModel.answerText}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:textChangedListener="@{viewModel.answerTextWatcher}"
      android:autofillHints="@string/survey_free_form_text_hint" />

    <Button
      android:id="@+id/submit_button"
      style="@style/SurveySubmitButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_navigation_buttons_margin"
      android:background="@{viewModel.isAnswerAvailable() ? @drawable/nps_survey_button_background : @drawable/nps_survey_button_inactive_background}"
      android:clickable="@{viewModel.isAnswerAvailable()}"
      android:enabled="@{viewModel.isAnswerAvailable()}"
      android:onClick="@{(v) ->viewModel.handleSubmitButtonClicked()}"
      android:text="@string/survey_submit_button"
      android:textColor="@{viewModel.isAnswerAvailable() ? @color/component_color_shared_secondary_4_text_color : @color/component_color_survey_disabled_button_text_color}"
      app:layout_constraintTop_toBottomOf="@id/free_form_text" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
