...
  <!-- AdminPinActivity -->
  <string name="admin_pin_requirement_description">Before we add profiles, we need to protect your account by creating a PIN. This gives you the ability to authorize manage profiles on the device.</string>
  <string name="admin_pin_pin_description">Do &lt;b&gt;not&lt;/b&gt; use a PIN you have set for personal accounts like banking or social security.</string>
  <string name="admin_pin_new_pin">New 5-Digit PIN</string>
  <string name="admin_pin_new_confirm">Confirm 5-Digit PIN</string>
  <string name="admin_pin_error_pin_length">Your PIN should be 5 digits long.</string>
  <string name="admin_pin_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="save">Save</string>
  <string name="admin_pin_activity_title">Authorise to add profiles</string>
  <!-- AddProfileActivity -->
  <string name="add_profile_activity_label">Add Profile</string>
  <string name="add_profile_title">Add Profile</string>
  <string name="add_profile_input_name">Name</string>
...
